app/assets/stylesheets/static_pages.css.scss
// Place all the styles related to the static_pages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
body {
	position: relative;
	width: 100%;
}
h1 {
	font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
	font-size: 50px;
	font-style: normal;
	font-variant: normal;
	font-weight: 500;
	line-height: 26.4px;
	padding-bottom: 3%;
	padding-top: 3%;
	padding-left: 1%;
}
h2 {
	font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
	font-size: 24px;
	font-style: italic;
	font-weight: 100;
	line-height: 30px;
}
p {
	font-family: verdana, sans-serif;
	font-size: 15px;
}
.main-body {
	margin-top: 7%;
	margin-left: 1%;
	margin-bottom: 5%
}
.img-class {
	margin-top: 60%;
	margin-bottom: 10%;
}
img.center {
    display: block;
    margin: 0 auto;
}
.carousel-caption {
	width: 650px;
	color: #FFF;
	font-size: 3em;
	line-height: 1em;
	bottom: 85%;
}
#carousel-caption-1 {
	color: #000;
}
#landing_page_carousel {
	margin-top: 50px;
	padding-top: 0%;
	padding-bottom: 0%;
}
#carousel-image {
	padding-left: 8%;
	padding-right: 8%;
}
.carousel-inner>.item>img {
	height: 600px;
	padding-left: 3.53%;
}
a.carousel-control:hover {
	background-color: #FFF;
}
.container-fluid {
	padding-right: 0;
	padding-left: 0;
	margin-right: 0;
	margin-left: 0;
}
.welcome_page_top {
	margin-top: 5%;
}
#welcome-button {
	width: 327px;
	height: 50px;
}
#welcome-button {
	padding-top: 12px; /*other padding is from bootstrap css*/
}
.welcome_intro_text {
	text-align: center;
	font-family: Optima, calibri, arial, sans-serif;
	font-size: 1.25em;
}
#welcome_intro {
	padding-bottom: 0%;
}
#icon {
	padding-bottom: 6%;
}
#welcome-button {
	font-family: Optima, calibri, arial, sans-serif;
	font-size: 1.25em;
	background-color: #ededed;
	color: #000;
}
.rest_of_landing_page {
	height: 200px;
}
.welcome_page {
	height: 360px;
	width: 100%;
	background-color: #75a8b4;
	margin-top: 5%;
}
.welcome_section {
	padding-top: 5%;
	padding-left: 2%;
	padding-right: 2%;
	line-height: 2em;
}
.welcome_text {
	font-family: optima, calibri, arial, sans-serif;
	font-size: 2em;
	text-align: center;
}
.welcome_text_p {
	font-family: optima, calibri, arial, sans-serif;
	font-size: 1.15em;
	color: #FFF;
	line-height: 2em;
	text-align: center;
	padding-bottom: 3%;
	padding-top: 2%;
}
.contact_us_styles {
	margin-bottom: 35%;
}
.about_styles {
	margin-bottom: 35%;
}
.panel-default>.panel-heading:hover {
	background-color: #75a8b4;
	color: #FFF;
	-webkit-transition: color 300ms;
	text-decoration: none;
}
.panel-group a {
	outline: 0;
	text-decoration: none;
}
a:hover {
	background: none;
}

